fix: css overflow

--- a/docs/src/sass/main/content/_main-content.sass
+++ b/docs/src/sass/main/content/_main-content.sass
@@ -5,8 +5,8 @@
 .main__cinemas
   padding: 2.25vw 0
 
-// .main__cinemas__list
-// .main__cinemas__list__header
+.main__cinemas__list
+.main__cinemas__list__header
 
 .main__cinemas__list__header__title
   margin-bottom: 1.25vw
@@ -43,8 +43,8 @@
 
 
 .main__cinemas__list__body__slider
-  // overflow-x: hidden	
-  // overflow-x: -moz-scrollbars-none
+  overflow-x: hidden	
+  overflow-x: -moz-scrollbars-none
 
   overflow-y: hidden	
   overflow-y: -moz-scrollbars-none
@@ -54,7 +54,7 @@
 
 .main__cinemas__list__body__slider__contents
   white-space: nowrap
-  // overflow-x: visible
+  overflow-x: visible
   transition: all 500ms ease-in
   
   
